# tasmor_lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  TODO.md
.claude/: settings.json
.claude/agents/: architect.md  rust-developer.md  security-expert.md  tasmota-expert.md  test-engineer.md  user-representative.md
.github/: PULL_REQUEST_TEMPLATE.md
examples/: bulb_test.rs  discovery_test.rs  energy_test.rs  routine_test.rs  uptime.rs
examples/supervisor/: Cargo.toml  README.md
examples/supervisor/src/: device_config.rs  device_manager.rs  device_model.rs  main.rs  persistence.rs  ui.rs
src/: capabilities.rs  device.rs  error.rs  lib.rs
src/command/: energy.rs  light.rs  mod.rs  power.rs  routine.rs  scheme.rs  status.rs
src/device/: broker_device_builder.rs  http_builder.rs  mod.rs  mqtt_builder.rs
src/discovery/: mod.rs
src/event/: device_event.rs  device_id.rs  event_bus.rs  mod.rs
src/manager/: device_config.rs  device_manager.rs  managed_device.rs  mod.rs
src/protocol/: broker_pool.rs  http.rs  mod.rs  mqtt.rs  mqtt_broker.rs  mqtt_pooled.rs  response_collector.rs  shared_mqtt_client.rs  topic_router.rs
src/response/: color.rs  dimmer.rs  energy.rs  fade.rs  mod.rs  power.rs  rgb_color.rs  routine.rs  scheme.rs  status.rs
src/state/: device_state.rs  mod.rs  state_change.rs
src/subscription/: callback.rs  mod.rs  subscribable.rs
src/telemetry/: mod.rs  sensor_parser.rs  state_parser.rs
src/types/: color.rs  datetime.rs  dimmer.rs  mod.rs  power.rs  rgb_color.rs  scheme.rs  speed.rs  time.rs  uptime.rs  wakeup_duration.rs
tests/: http_integration.rs  mqtt_integration.rs  real_devices.rs
