[package]
name = "tasmor_lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
license = "MPL-2.0"
description = "Rust library to control Tasmota devices via MQTT and HTTP"
keywords = ["tasmota", "mqtt", "home-automation", "iot"]
categories = ["network-programming", "api-bindings"]

[features]
default = []

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
rumqttc = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6"
mockforge-mqtt = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
