[package]
name = "tasmota-supervisor"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
license = "MPL-2.0"

[dependencies]
tasmor_lib = { path = "../.." }
chrono = "0.4"
eframe = "0.33"
egui = "0.33"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "6.0"

[dev-dependencies]
tokio = { version = "1.48", features = ["test-util"] }

[[bin]]
name = "tasmota-supervisor"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
